[tool.poetry]
name = "Joshua From TWEWY AI Chatbot"
version = "0.1.0"
description = "some shitty ai"
authors = ["ninja_5000"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
Flask = "^2.0.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"